# ChangeLog for kde-misc/skanlite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/skanlite/ChangeLog,v 1.9 2010/06/28 06:13:48 fauli Exp $

  28 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  skanlite-0.4-r1.ebuild:
  stable x86, bug 325307

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> skanlite-0.4-r1.ebuild:
  stable amd64, bug 325307

*skanlite-0.4-r1 (27 Feb 2010)

  27 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +skanlite-0.4-r1.ebuild:
  Change SLOT from 0 to 4.

*skanlite-0.4 (21 Feb 2010)

  21 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +skanlite-0.4.ebuild:
  Version bump.

  18 Nov 2009; Christian Faulhammer <fauli@gentoo.org> skanlite-0.3.ebuild:
  stable x86, bug 291750

  03 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> skanlite-0.3.ebuild:
  amd64 stable wrt #291750

*skanlite-0.3 (22 Jun 2009)

  22 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org> -skanlite-0.2.ebuild,
  +skanlite-0.3.ebuild:
  Version bump per bug #274937. Remove old.

  05 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org> skanlite-0.2.ebuild:
  Fix desc, bug #257703

*skanlite-0.2 (03 Feb 2009)

  03 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org> +metadata.xml,
  +skanlite-0.2.ebuild:
  Initial import of skanlite; this fixes bug #256744
