@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/skanlite
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/skanlite/ChangeLog,v 1.9 2010/06/28 06:13:48 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/skanlite/ChangeLog,v 1.10 2010/08/09 16:42:18 reavertm Exp $
+
+  09 Aug 2010; Maciej Mrozowski <reavertm@gentoo.org>
+  skanlite-0.4-r1.ebuild:
+  Remove unnecessary KDE_MINIMAL, properly change SLOT
 
   28 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
   skanlite-0.4-r1.ebuild:
